@@ -94,9 +94,7 @@ export(orthogonalRectanlgePDF)
 export(oxfordWeather)
 export(partitionAddresses)
 export(partitionFatalities)
-export(partitionRoadEndpoints)
 export(partitionRoads)
-export(pdfPartitionRoadEndpoints)
 export(pearsonResiduals)
 export(pointIndex)
 export(pointOverlap)
